--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -32,7 +32,7 @@ nav {
     border-bottom: 1px solid #ff6060;
   }
 
-  @media screen and (max-width: 1490px) {
+  @media screen and (max-width: 992px) {
     header {
       margin: 40px 2.5%;
       width: 95%;
