--- a/src/pages/A-propos/A-propos.module.scss
+++ b/src/pages/A-propos/A-propos.module.scss
@@ -8,7 +8,7 @@
     margin-right: 3%;
 }
 
-@media screen and (max-width: 1490px) {
+@media screen and (max-width: 992px) {
     .collapsemargin {
         margin-left: 0;
         margin-right: 0;
