--- a/src/pages/Accueil/Accueil.module.scss
+++ b/src/pages/Accueil/Accueil.module.scss
@@ -13,7 +13,7 @@
     margin-right: 3%;
 }
 
-@media screen  and (max-width: 1490px) {
+@media screen  and (max-width: 992px) {
 
     .Accueil > .banniere {
         height: 110px;
