--- a/src/pages/Error/Error.module.scss
+++ b/src/pages/Error/Error.module.scss
@@ -26,7 +26,7 @@
     margin-right: 3%;
 }
 
-@media screen and (max-width: 1490px) {
+@media screen and (max-width: 992px) {
 
   .titre404 {
     margin: 100px;
