--- a/src/pages/Fiche-logement/Fiche-logement.module.scss
+++ b/src/pages/Fiche-logement/Fiche-logement.module.scss
@@ -77,7 +77,7 @@
     margin-right: 3%;
 }
 
-@media screen and (max-width: 1490px) {
+@media screen and (max-width: 992px) {
 
     .logementspropietaire {
         display: block;
